# mcp-sandbox

./: Containerfile  README.md  mcp-sandbox.service  mcp-sandbox.sysconfig  pyproject.toml
mcp_sandbox/: __init__.py  server.py
